--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,14 @@
-<div id="particles-js">
-  <div class="header">
-      <h1>
-        <span class="site-title">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
-      </h1>
-      <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      </div>
-      <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
-      </div>
-  </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+<div class="jinya-header">
+    <div class="header">
+        <h1>
+            <span class="site-title">Jinya Gallery CMS</span>
+            <span class="site-description">A content management system from artists made by artists</span>
+        </h1>
+        <div class="header-links">
+            <a class="link" href="#about" data-scroll>About Jinya</a>
+            <a class="link" href="#who-uses-jinya" data-scroll>Who uses Jinya</a>
+            <a class="link" href="#how-can-i-get-jinya" data-scroll>How can I get Jinya</a>
+        </div>
+    </div>
+    <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
