--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,33 @@
- <div class="user-details">
-  <h1> My Expertise </h1>
-  <p> {{site.user_description}} </p>
+<div class="user-details">
+    <h1> About Jinya </h1>
+    <p>
+        The Jinya Gallery CMS, short Jinya, is a content management system developed by Imanuel Ulbricht and Jenny
+        Hefczyc, also known als Jenny Jinya. The idea behind Jinya is to create a place for artists where they want to
+        manage their portfolio.
+    </p>
 </div>
-  <div class="user">
+<div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+        <h2>Creators</h2>
+        <p>
+            Jinya is developed by Jenny Hefcyzc and Imanuel Ulbricht. We are both artists and have both experience in
+            design. We believe in the concept of dog fooding, both our portfolios are created with Jinya.<br/>
+            <a href="https://jenny-jinya.com">Jenny Jinya</a>
+            <a href="https://design.ulbricht.codes">Imanuel Ulbricht</a>
+        </p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+        <h2>Reasons</h2>
+        <p>
+            In 2017 Jenny Hefcyzc asked Imanuel Ulbricht for a new portfolio website, this is the point where Jinya was
+            born. Together we worked hard on creating the best possible way to manage and show your portfolio.
+        </p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+        <h2>Technology</h2>
+        <p>
+            For every software you use there is the question what it is based on. Jinya is based on modern web
+            technologies and can be hosted on nearly every webhoster out there.
+        </p>
     </div>
 </div>
