--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -1,4 +1,4 @@
-#projects {
+#users {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,7 +10,7 @@
   }
 }
 
-.user-projects {
+.user-users {
   margin: 20px auto;
   img {
     max-width: 100%;
@@ -43,6 +43,7 @@
     width: 48%;
   }
 }
+
 .images-right {
   @media only screen and (min-width: $cut) {
     float: right;
@@ -81,22 +82,22 @@
   text-decoration: none;
   cursor: pointer;
   transition: color 0.3s ease-out,
-              background-color 0.3s ease-out,
-              border-color 0.3s ease-out;
+  background-color 0.3s ease-out,
+  border-color 0.3s ease-out;
   &:hover {
     background-color: $purple;
     border-color: $purple;
     color: #fff;
     transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
+    background-color 0.3s ease-in,
+    border-color 0.3s ease-in;
   }
   &:active {
     background-color: $purple;
     border-color: $purple;
     color: #fff;
     transition: color 0.3s ease-in,
-                background-color 0.3s ease-in,
-                border-color 0.3s ease-in;
+    background-color 0.3s ease-in,
+    border-color 0.3s ease-in;
   }
 }
