Created sites created with jinya

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
         </h1>
         <div class="header-links">
             <a class="link" href="#about" data-scroll>About Jinya</a>
-            <a class="link" href="#who-uses-jinya" data-scroll>Who uses Jinya</a>
-            <a class="link" href="#how-can-i-get-jinya" data-scroll>How can I get Jinya</a>
+            <a class="link" href="#users" data-scroll>Sites created with jinya</a>
+            <a class="link" href="#your-site" data-scroll>Get Jinya</a>
         </div>
     </div>
     <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
