--- a/_includes/users.html
+++ b/_includes/users.html
@@ -3,31 +3,18 @@
 </div>
 <div class="user-users">
     <div class="images-right">
-        <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+        <img alt="jenny-jinya.com" src="{{ "/assets/img/jenny-jinya.com.png" | prepend: site.baseurl }}" />
     </div>
     <div class="contents">
-        <h3> Project Title </h3>
-        <ul>
-            <li> Featured Skills</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.</p>
-        <a class="project-link" href="#">Check it out</a>
-    </div>
-</div>
-<div class="user-projects">
-    <div class="images-left">
-        <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
-    </div>
-    <div class="contents-right">
-        <h3> Project Title </h3>
-        <ul>
-            <li> Featured Skills</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.</p>
-        <a class="project-link" href="#">Check it out</a>
+        <h2> Jenny Jinya </h2>
+        <p>
+            Jenny Jinya is a freelance illustrator based in Germany, she studies Digital Media and had a number of
+            exhibitions since she is 16, her new portfolio got an incredible amount of positive feedback over time.
+        </p>
+        <blockquote class="what-the-artist-says">
+            I love my new site, it is way better organized than before and blablabla.
+            <cite>Jenny Hefcyzc (Jinya)</cite>
+        </blockquote>
+        <a class="project-link" href="https://jenny-jinya.com">Check it out</a>
     </div>
 </div>
