--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -30,6 +30,11 @@
 }
 
 .contents {
+  h2 {
+    margin: 0;
+    padding: 0;
+  }
+
   @media only screen and (min-width: $cut) {
     margin-left: 0;
     width: 48%;
@@ -99,5 +104,27 @@
     transition: color 0.3s ease-in,
     background-color 0.3s ease-in,
     border-color 0.3s ease-in;
+  }
+}
+
+.what-the-artist-says {
+  padding: 0 0 0 1rem;
+  margin: 1rem 0 0;
+  box-sizing: border-box;
+  border-left: 2px solid $primary;
+
+  cite {
+    display: block;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 1.5rem;
+      height: 1px;
+      display: inline-block;
+      background: $primary;
+      margin-bottom: 0.25rem;
+      margin-right: 0.25rem;
+    }
   }
 }
