Finished design and texts

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,8 @@
 <div class="user-details">
-    <h1> About Jinya </h1>
+    <h1> About <i>Jinya</i></h1>
     <p>
-        The Jinya Gallery CMS, short Jinya, is a content management system developed by Imanuel Ulbricht and Jenny
+        The Jinya Gallery CMS, short <i>Jinya</i>, is a content management system developed by Imanuel Ulbricht and
+        Jenny
         Hefczyc, also known als Jenny Jinya. The idea behind Jinya is to create a place for artists where they want to
         manage their portfolio.
     </p>
@@ -10,23 +11,23 @@
     <div class="tech">
         <h2>Creators</h2>
         <p>
-            Jinya is developed by Jenny Hefcyzc and Imanuel Ulbricht. We are both artists and have both experience in
-            design. We believe in the concept of dog fooding, both our portfolios are created with Jinya.<br/>
-            <a href="https://jenny-jinya.com">Jenny Jinya</a>
-            <a href="https://design.ulbricht.codes">Imanuel Ulbricht</a>
+            <i>Jinya</i> is developed by Jenny Hefcyzc and Imanuel Ulbricht. We are both artists and have both
+            experience in design. We believe in the concept of dog fooding, both our portfolios are created with <i>Jinya</i>.<br/>
+            <a href="https://jenny-jinya.com">Jenny Jinya</a> &#9899; <a href="https://design.ulbricht.codes">Imanuel
+            Ulbricht</a>
         </p>
     </div>
     <div class="tech">
         <h2>Reasons</h2>
         <p>
-            In 2017 Jenny Hefcyzc asked Imanuel Ulbricht for a new portfolio website, this is the point where Jinya was
-            born. Together we worked hard on creating the best possible way to manage and show your portfolio.
+            In 2017 we talked about a new portfolio website for Jenny, this is the point where <i>Jinya</i> was born.
+            Together we worked hard on creating the best possible way to manage and show your portfolio.
         </p>
     </div>
     <div class="tech">
         <h2>Technology</h2>
         <p>
-            For every software you use there is the question what it is based on. Jinya is based on modern web
+            For every software you use there is the question what it is based on. <i>Jinya</i> is based on modern web
             technologies and can be hosted on nearly every webhoster out there.
         </p>
     </div>
