--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
             <span class="site-description">A content management system from artists made by artists</span>
         </h1>
         <div class="header-links">
-            <a class="link" href="#about" data-scroll>About Jinya</a>
-            <a class="link" href="#users" data-scroll>Sites created with jinya</a>
-            <a class="link" href="#your-site" data-scroll>Get Jinya</a>
+            <a class="link" href="#about" data-scroll>About <i>Jinya</i></a>
+            <a class="link" href="#users" data-scroll>Sites created with <i>Jinya</i></a>
+            <a class="link" href="#your-site" data-scroll>Get <i>Jinya</i></a>
         </div>
     </div>
     <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
