--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
-  <body>
-      {% include header.html %}
-      <section id="about">
-        {% include about.html %}
-      </section>
-      <section id="users">
-          {% include users.html %}
-      </section>
-        {{ content }}
-      {% include footer.html %}
-  </body>
+{% include head.html %}
+<body>
+{% include header.html %}
+<section id="about">
+    {% include about.html %}
+</section>
+<section id="users">
+    {% include users.html %}
+</section>
+<section id="get-jinya">
+    {% include get-jinya.html %}
+</section>
+{% include footer.html %}
+</body>
