--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,11 @@
 @import "lib/normalize";
 @import "lib/fontawesome";
 @import "lib/devicon";
-
-@import 'base';
 @import 'vars';
+@import 'base';
 @import 'animation';
 @import 'header';
 @import 'about';
 @import 'users';
+@import 'get-jinya';
 @import 'footer';
