--- a/_includes/users.html
+++ b/_includes/users.html
@@ -1,5 +1,5 @@
 <div class="user-details">
-    <h1> Sites created with Jinya </h1>
+    <h1> Sites created with <i>Jinya</i></h1>
 </div>
 <div class="user-users">
     <div class="images-right">
@@ -11,10 +11,6 @@
             Jenny Jinya is a freelance illustrator based in Germany, she studies Digital Media and had a number of
             exhibitions since she is 16, her new portfolio got an incredible amount of positive feedback over time.
         </p>
-        <blockquote class="what-the-artist-says">
-            I love my new site, it is way better organized than before and blablabla.
-            <cite>Jenny Hefcyzc (Jinya)</cite>
-        </blockquote>
-        <a class="project-link" href="https://jenny-jinya.com">Check it out</a>
+        <a class="project-link" target="_blank" href="https://jenny-jinya.com">Check it out</a>
     </div>
 </div>
