--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,44 +1,87 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body {
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-    line-height: 1.5;
-    color: #555;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  line-height: 1.5;
+  color: #555;
+  font-family: 'Montserrat', sans-serif;
 }
+
 article, aside, figcaption, figure, footer, header, nav, section {
-    display: block;
+  display: block;
 }
-h1, h2, h3, h4, stong {
-    margin-top: 1em;
-    padding-top: 1em;
-    line-height: 1.25;
-    color: #333;
+
+h1, h2, h3, h4, strong {
+  margin-top: 1em;
+  padding-top: 1em;
+  line-height: 1.25;
+  color: #333;
 }
+
 h1 {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
 }
+
 h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
+
 h3 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
+
 h4 {
-    font-size: 1rem;
+  font-size: 1rem;
 }
+
 ul, ol {
-    margin: 1em 0;
-    padding-left: 40px;
+  margin: 1em 0;
+  padding-left: 40px;
 }
+
 p, figure {
-    margin: 1em 0;
+  margin: 1em 0;
 }
+
 a img {
-    border: none;
+  border: none;
 }
+
 sup, sub {
-    line-height: 0;
+  line-height: 0;
+}
+
+a {
+  color: $primary;
+  font-weight: bold;
+  text-decoration: none;
+  position: relative;
+
+  &:focus {
+    outline: none;
+  }
+  &::-moz-focus-inner {
+    border: 0;
+  }
+
+  &:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: $primary;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    opacity: 0;
+    transition: height 0.3s, opacity 0.3s, transform 0.3s;
+    transform: translateY(0.5rem);
+  }
+
+  &:hover:after {
+    height: 0.15rem;
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
