--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -65,6 +65,11 @@
   text-align: center;
   font-size: 30px;
   cursor: pointer;
+
+  &:hover::after {
+    content: none;
+  }
+
   .icon {
     position: absolute;
     -webkit-transform-style: preserve-3d;
