--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -77,6 +77,7 @@
   display: block;
   width: 100px;
   margin: 10px 0px;
+  font-weight: unset;
   padding: 5px;
   color: $main;
   background-color: transparent;
@@ -96,6 +97,10 @@
     transition: color 0.3s ease-in,
     background-color 0.3s ease-in,
     border-color 0.3s ease-in;
+
+    &::after {
+      content: none;
+    }
   }
   &:active {
     background-color: $purple;
