--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,8 @@
     <p>
         The Jinya Gallery CMS, short <i>Jinya</i>, is a content management system developed by Imanuel Ulbricht and
         Jenny
-        Hefczyc, also known als Jenny Jinya. The idea behind Jinya is to create a place for artists where they want to
+        Hefczyc, also known als Jenny Jinya. The idea behind <i>Jinya</i> is to create a place for artists where they
+        want to
         manage their portfolio.
     </p>
 </div>
