--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,4 +3,4 @@
     <p>Build with <span class="love">❤</span> by <a href="https://jinya.de">Jinya Agency</a></p>
 </footer>
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
-<script; src = "{{ "/assets/js/main.js;" | prepend: site.baseurl }}"></script>
+<script src = "{{ "/assets/js/main.js;" | prepend: site.baseurl }}"></script>
