--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -12,12 +12,21 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background: url("/startpage-touch.jpg") no-repeat top center fixed;
-  background-size: cover;
   height: 100%;
   width: 100%;
+}
+
+.jinya-home {
+  background: url("/startpage-touch.jpg") no-repeat top center fixed;
+  background-size: cover;
 
   @include extra-small-screen {
     background: none;
   }
+}
+
+.jinya-container {
+  display: flex;
+  flex-flow: row wrap;
+  min-height: 100vh;
 }
