--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -9,7 +9,7 @@
   --footer-background-color: #b6b1bb;
 
   font-size: 16px;
-  font-family: objektiv-mk1, sans-serif;
+  font-family: Lato, sans-serif;
   color: var(--black);
 }
 
