--- a/static/css/variables.css
+++ b/static/css/variables.css
@@ -29,6 +29,8 @@
 		--text-color-white: #f5f5f5;
 		--red: #771b18;
 
+		--menu-item-color: var(--white);
+
 		--success-background-color: #2e60441f;
 		--success-color: #2e6044;
 
