--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -1,6 +1,6 @@
 :root {
 	font-size: 16px;
-	font-family: "Albert Sans", sans-serif;
+	font-family: 'Albert Sans', sans-serif;
 	color: var(--text-color);
 }
 
